--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -45,7 +45,7 @@
               <div style="font-size: 18px; font-weight: 700; margin-bottom: 5px; color: #2C3E50;">
                 {{ profile?.poin | number }}
               </div>
-              <div style="font-size: 12px; color: #5A6C7D;">Poin Sakuma</div>
+              <div style="font-size: 12px; color: #5A6C7D;">Poin Finpress</div>
             </div>
           </div>
         </ng-container>
